fixes the isComplete not being aligned with the database and implements changing it on the database when changed in the frontend

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -16,6 +16,7 @@
 }
 
 .modal_close {
+  @include m.button;
   position: absolute;
   top: 10px;
   right: 10px;
