--- a/src/components/ToDoListForm/ToDoListForm.module.scss
+++ b/src/components/ToDoListForm/ToDoListForm.module.scss
@@ -3,7 +3,7 @@
 
 .toDoListForm {
   @include m.displayFlex(column, center, center, nowrap);
-  gap: 0.75rem;
+  gap: 1rem;
   width: 300px;
   height: 200px;
 }
@@ -14,7 +14,7 @@
 }
 
 .form_Btn {
-
+  @include m.button;
 }
 
 .error_text {
